fixed blog content wrap

--- a/client/videos-app/src/Blog.css
+++ b/client/videos-app/src/Blog.css
@@ -35,4 +35,5 @@
 .blog-content {
     font-size: 1em;
     line-height: 1.6;
+    white-space: pre-wrap;
 }
